a11y: fix color contrast
Fixes the color contrast for `blockquote` elements.

--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -43,7 +43,6 @@ blockquote {
   padding-left: 1.1rem;
   margin-left: 1rem;
   font-style: italic;
-  color: #ada8a8;
 }
 
 pre {
